# pygeodyn

./: .gitignore  README.md
.ipynb_checkpoints/: README-checkpoint.md
DEMO/: Initialize New ICESat-2 Timeperiod 2020.ipynb
GETTING_STARTED/: How_DensityModels_are_Implemented.ipynb  example_run_settings.yaml  how_to_run_geodyn.ipynb  understanding_pygeodyn.ipynb
data/: README.md
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js  todo.html
interface_kamodo_geodyn/: Use_ctipe_w_kamodo_on_aws.ipynb  connecting_kamodo_to_pygeodyn.ipynb  detailed_testing_CallKamodo_Directly.ipynb  iter2_calls_w_msis2  iter3_calls_w_msis2  kamodo_instructions_by_and_for_zach.ipynb  modify_icesat2_setup.py  run_pygeodyn_with_ctipe_density.ipynb  sample_input_kamodocall  test.unf  testing_CL_CallKamodo_Geodyn.ipynb  testing_OrbitCloud_CallKamodo_Geodyn.ipynb  using_kamodo_with_mulitple_models.ipynb
interface_kamodo_geodyn/KamodoGroupCodeShare/C++_layer/: CMakeLists.txt  PyHC2021_SFinCXX.pptx.lnk  main.cpp
kamodo_geodyn_docs/: make.bat
notebooks/: .gitignore  TRAJ.txt  ecef2eci.ipynb  initialize_spire_83_84_85.ipynb  spire_pce.ipynb  test_initsequence-Copy1.ipynb  test_pygeodyn.ipynb  update_initial_conditions.ipynb  view_residuals.ipynb
pygeodyn/: Adding_a_NewSatellite_ICESat2.ipynb  DevelopmentRun_notebook.ipynb  Development_notebook.ipynb  ICESat2_TrajectoryAnalysis.ipynb  ICESat2_TrajectoryAnalysis_NEW.ipynb  ICESat2_TrajectoryAnalysis_RunOntheSide.ipynb  Untitled.ipynb  clean_setups.ipynb  err2kamodo  err_msis00  err_msis2  err_orig  geodyn_options.txt  (+4 more)
(+2301 files in other folders)
